# cruise

./: .gitignore  .travis.yml  COPYRIGHT  INSTALL  Makefile.in  README.md  configure.ac  configure.in  cruise-config.in  cruise-dynamic.h  cruise-runtime-config.h.in  scrmfs-log-format.h
check_fns/: scrmfs_check_fns  scrmfs_list.txt
maint/: generate-bg-compilers.sh
maint/config/: check_arch.m4  check_containerlib.m4
runtime/: .gitignore  INSTALL  Makefile  Makefile.in  README  buildme_bgq  buildme_opt  configure  configure.in  cruise-config.in  cruise-defs.h  ipc_cleanup  prepare  scrmfs-config  scrmfs-config.in  scrmfs-defs.h  scrmfs-dynamic.h  scrmfs-file.h  scrmfs-gen-cc.pl.in  scrmfs-gen-cxx.pl.in  scrmfs-gen-fortran.pl.in  scrmfs-mk-log-dirs.pl.in  scrmfs-runtime-config.h  scrmfs-runtime-config.h.in  scrmfs-stack.c  scrmfs-stack.h  scrmfs.h  test_memcpy.c  test_ramdisk.c  test_ramdisk_iter.c
runtime/container/: .gitignore  Makefile.am  README  TODO  configure.ac  prepare
runtime/container/include/: container.h  container_config.h
runtime/container/lib/: libcontainer.so.0.0.0
runtime/container/src/: Allocator.cpp  Allocator.hh  BackingStore.cpp  BackingStore.hh  ByteWalker.hh  Container-fwd.hh  Container.cpp  Container.hh  ContainerException.cpp  ContainerException.hh  ContainerSet.cpp  ContainerSet.hh  ContainerStore.cpp  ContainerStore.hh  FakeStoreLock.cpp  FakeStoreLock.hh  FileBackingStore.cpp  FileBackingStore.hh  HandleCache.hh  HandleCacheItem.cpp  HandleCacheItem.hh  IntrusivePtr.hh  IntrusivePtrHelper.hh  Log.hh  Makefile.subdir  OffsetList.hh  OffsetPtr.hh  PoolAllocator.cpp  PoolAllocator.hh  ProcessLocalStoreLock.cpp  ProcessLocalStoreLock.hh  RangeCombiner.hh  RangeIterator.hh  SafeBool.hh  ScopedStoreLock.cpp  ScopedStoreLock.hh  SimpleAllocator.cpp  SimpleAllocator.hh  SimplePoolAllocator.cpp  SimplePoolAllocator.hh  (+11 more)
runtime/container/test/: Makefile.subdir  offset.cpp  ranges.cpp  simple.cpp
runtime/lib/: cruise-fixed.c  cruise-fixed.h  cruise-internal.h  cruise-stack.c  cruise-stack.h  cruise-stdio.c  cruise-stdio.h  cruise-sysio.c  cruise-sysio.h  cruise.c  cruise.h  lookup3.c  lookup8.c  scrmfs-container.c  scrmfs-container.h  scrmfs-fixed.c  scrmfs-internal.h  scrmfs-mpi-init-finalize.c  scrmfs-mpi-io.c  scrmfs-posix.c  scrmfs-stdio.c  scrmfs-stdio.h  scrmfs-sysio.c  scrmfs.c  scrmfs.h
runtime/maint/: generate-bg-compilers.sh
runtime/maint/check_fns/: scrmfs_list.txt
runtime/maint/config/: check_containerlib.m4  check_numa.m4
runtime/results/: crunch_results  plan.txt  results_1  results_2  results_5b_cab.txt  scaling_cab.txt  scaling_sierra.txt
runtime/results/intranode/numactl/: 1-shm-interleaved  1-shm-localbank  1-shm-remotebank  interleaved  interleaved-mapping  interleaved-nomapping  localbank  remotebank
runtime/results/intranode/numactl/old-results/: local-mapping  local-nomapping
runtime/results/results_5a_5b_sierra/: memcpy_sierra_1-12  ramdisk_sierra_1-12  scrmfs-1-blk_sierra_1-12  scrmfs-nblks_sierra_1-12
runtime/results/results_5c_sierra/: scrmfs_128kbc  scrmfs_16kbc  scrmfs_16mbc  scrmfs_1mbc  scrmfs_256kbc  scrmfs_2mbc  scrmfs_32kbc  scrmfs_32mbc  scrmfs_4kbc  scrmfs_4mbc  scrmfs_512kbc  scrmfs_64kbc  scrmfs_64mbc  scrmfs_8kbc  scrmfs_8mbc
runtime/results/scaling/: README_BGQ  bgq.txt  makefile  makefile.bgq  memcpy_ramdisk_memfs_1.moab  run_scalability.sh  test_memcpy.c  test_memcpy_1.c  test_ramdisk.c  test_scrmfs.c  zin.txt
runtime/results/scaling_bgq/: README_BGQ  bgq.xlsx  bgq_cores.txt  bgq_scaling.xlsx  bgq_scaling2.txt  run_1.sh  run_120k.sh  run_128.sh  run_16.sh  run_16k.sh  run_1k.sh  run_2.sh  run_24k.sh  run_24k_memcpy.sh  run_256.sh  run_2k.sh  run_32.sh  run_32k.sh  run_4.sh  run_4k.sh  run_512.sh  run_64.sh  run_64k.sh  run_64k_0_0_0.sh  run_64k_0_0_1.sh  run_64k_0_1_0.sh  run_64k_0_1_1.sh  run_64k_1_0_0.sh  run_64k_1_0_1.sh  run_64k_1_1_0.sh  run_64k_1_1_1.sh  run_64k_check.sh  run_64k_check_debug.sh  run_64k_check_debug_procs.sh  run_64k_memcpy.sh  run_8.sh  run_8k.sh  run_96k.sh  run_all_cores_1.sh  test_memcpy_check.c  (+1 more)
runtime/src/: cruise-sysio.h  lookup3.c
runtime/tests/: makefile  makefile.bgq  test1  test1.c  test_fopen.c  test_fprintf.c  test_memcpy.c  test_readwrite.c  test_scanf.c  test_truncate.c  test_ungetc.c  test_writeread.c  test_wscanf.c
src/: cruise-fixed.c  cruise-fixed.h  cruise-internal.h  cruise-stack.c  cruise-stack.h  cruise-stdio.c  cruise-stdio.h  cruise-sysio.c  cruise-sysio.h  cruise.c  cruise.h
tests/: Makefile  makefile  makefile.bgq  test_fprintf.c  test_ramdisk.c  test_scanf.c  test_truncate.c  test_ungetc.c  test_writeread.c  test_wscanf.c
